Add workers: WorkerPublisherSNS and WorkerReceiverTopicSQS

--- a/WorkerAWS/appsettings.json
+++ b/WorkerAWS/appsettings.json
@@ -7,5 +7,10 @@
   },
   "SQS": {
     "QueueName": "TestQueue"
+  },
+  "SNS": {
+    "TopicName": "SNSTopic",
+    "Queue1Name": "Queue1",
+    "Queue2Name": "Queue2"
   }
 }
